--- a/vs2015/FirstPersonShooter.vcxproj
+++ b/vs2015/FirstPersonShooter.vcxproj
@@ -19,10 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{973EA502-76EB-4261-B9E2-D673380A03A9}</ProjectGuid>
+    <ProjectGuid>{B71D5CEE-E3A3-4272-A94D-BF5C36BB441A}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>vgfw</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Label="Configuration">
@@ -85,7 +83,7 @@
     <ClInclude Include="..\vgfw.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\test.cpp" />
+    <ClCompile Include="..\firstpersonshooter.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
