3d software renderer project (how could I resist?!), step 1, new project and line drawing in vgfw

--- a/vs2015/3d.vcxproj
+++ b/vs2015/3d.vcxproj
@@ -18,8 +18,14 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\vgfw.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\3d.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{B71D5CEE-E3A3-4272-A94D-BF5C36BB441A}</ProjectGuid>
+    <ProjectGuid>{73E64264-568B-493C-985B-37EC2BD2A976}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -80,12 +86,6 @@
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="..\firstpersonshooter.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\vgfw.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
